frontend/test/should_pass/strfunc_001.grg
using attrib_model_001;

rule r1
{
	str:NSTRING;
	str2:NSTRING;
	b:NBOOL;

	if {
		indexOf(str.a, "test") != -1;
		lastIndexOf(str.a, "test") == indexOf(str.a, "test");
		indexOf(str2.a, "test") != -1;
		lastIndexOf(str2.a, "test") == indexOf(str2.a, "test");

		substring(str.a, 0, indexOf(str.a, "test"))
				+ "rules"
				+ substring(str.a, indexOf(str.a, "test") + length("test"),
					length(str.a) - indexOf(str.a, "test") - 4)
		==
		replace(str2.a, indexOf(str2.a, "test"), 4, "rules");
	}

	modify {
		eval {
			str.a = substring(str.a, 0, indexOf(str.a, "test"))
				+ "rules"
				+ substring(str.a, indexOf(str.a, "test") + length("test"),
					length(str.a) - indexOf(str.a, "test") - 4);

			str2.a = replace(str2.a, indexOf(str2.a, "test"), 4, "rules");

			b.a = str.a == str2.a;
		}
	}
}
